add GetCollectionPhotos & some fixes
