# cmd/main.go
@@ -10,6 +10,7 @@ import (
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
+	"github.com/joho/godotenv"
 
 	// "github.com/joho/godotenv"
 	swaggerFiles "github.com/swaggo/files"
@@ -24,10 +25,10 @@ import (
 // @schemes https
 func main() {
 
-	// // Загрузка переменных окружения (local)
-	// if err := godotenv.Load(".env.local"); err != nil {
-	// 	log.Println("Error loading .env.local file")
-	// }
+	// Загрузка переменных окружения (local)
+	if err := godotenv.Load(".env.local"); err != nil {
+		log.Println("Error loading .env.local file")
+	}
 
 	// БД
 	db := postgres.InitDB()
@@ -90,8 +91,9 @@ func main() {
 		collection.Use(h.AuthMiddleware())
 		collection.POST("/create", h.CreateCollection)
 		collection.GET("/list", h.ListCollections)
-		collection.GET("/:id", h.GetCollection)
+		collection.GET("/:id", h.GetCollectionInfo)
 		collection.DELETE("/:id", h.DeleteCollection)
+		collection.GET("/:id/photos", h.GetCollectionPhotos)
 	}
 
 	// Загрузка файлов
